--- a/config/fluxnetworks-common.toml
+++ b/config/fluxnetworks-common.toml
@@ -4,10 +4,10 @@
 	#Range: > -1
 	maximumPerPlayer = 3
 	#Allows someone to be a network super admin, otherwise, no one can access or dismantle your flux devices or delete your networks without permission
-	enableSuperAdmin = true
+	enableSuperAdmin = false
 	#See ops.json. If the player has permission level equal or greater to the value set here they will be able to Activate Super Admin. Setting this to 0 will allow anyone to active Super Admin.
 	#Range: > 0
-	superAdminRequiredPermission = 1
+	superAdminRequiredPermission = 0
 
 [general]
 	#Enables redstone being compressed with the bedrock and obsidian to get flux
